crates/uitest/fixtures/ty/def/impl_conflict.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/def/impl_conflict.fe
---
error[6-0000]: conflict method implementation
   ┌─ impl_conflict.fe:7:8
   │
 7 │     fn foo(self) {}
   │        ^^^ conflict method implementation
   ·
15 │     fn foo<E>(self: Self<E>) {}
   │        --- conflict with this method implementation

error[6-0000]: conflict method implementation
   ┌─ impl_conflict.fe:11:8
   │
11 │     fn foo(self) {}
   │        ^^^ conflict method implementation
   ·
15 │     fn foo<E>(self: Self<E>) {}
   │        --- conflict with this method implementation


